backend/public/error.log
  File "<string>", line 1
    'print('hello
            ^
SyntaxError: invalid syntax
